<resources>
    <string name="app_name">Kindle Sender</string>
    <string name="setting">Setting</string>
    <string name="upload">Upload to Kindle</string>
    <string name="help">Help</string>
    <string name="feedback">Feedback</string>
    <string name="clear_content">Clear</string>
    <string name="preview">Preview</string>
    <string name="send_to_kindle">Send to Kindle</string>
    <string name="main_tips">Desktop/Iphone \n Visit www.kindlezhushou.com</string>
    <string name="back">Back</string>
    <string name="menu">Menu</string>
    <string name="Done">Done</string>
    <string name="email_hint">请填入您的认可邮箱</string>
    <string name="from_email_hint">请填写正确的发送邮箱</string>
    <string name="please_input_content">请填写正确的文章链接</string>
    <string name="to_email_hint">请填入Kindle接收邮箱</string>
    <string name="show_done">设置完成</string>
    <string name="show_success">发送成功</string>
    <string name="permission_denied">Permission denied</string>
    <string name="tip_upload_file">上传文件名：</string>
    <string name="pick_file">选择文件</string>
    <string name="snack_pick_file">请选择文件</string>
</resources>
