<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_select"
        style="@style/sendButton"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_margin="@dimen/common_page_edge_padding"
        android:text="@string/pick_file" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_page_edge_padding"
        android:text="@string/tip_upload_file" />

    <TextView
        android:id="@+id/file"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_margin="@dimen/common_page_edge_padding"
        android:background="#e0e0e0" />

    <Button
        android:id="@+id/upload"
        style="@style/sendButton"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_selector"
        android:text="@string/send_to_kindle" />

</LinearLayout>