<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_from_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/common_page_edge_padding">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_from_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:gravity="center_vertical"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:paddingEnd="4dp"
            android:paddingStart="4dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_to_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="@dimen/common_page_edge_padding">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_to_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:gravity="center_vertical"
                android:hint="@string/to_email_hint"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/sp_emails"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:entries="@array/sp_emails"
            android:minWidth="30dp" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_save"
        style="@style/sendButton"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/common_page_edge_padding"
        android:text="@string/Done" />

    <WebView
        android:id="@+id/webview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="@dimen/common_page_edge_padding" />

</LinearLayout>